@@ -1,3 +1,8 @@
+Beta 3
+------
+
+* r3264: Added a $deep parameter to Doctrine_Record::refresh()
+
 Beta 2
 ------
 
